--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -3,7 +3,7 @@
     <device id="retina4_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -146,10 +146,10 @@
                                                     <rect key="frame" x="16" y="26" width="635" height="26"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HwH-pd-pJK">
-                                                            <rect key="frame" x="0.0" y="0.0" width="527" height="26"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="635" height="26"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Document 1.pdf" textAlignment="natural" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dlt-jI-SME" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="527" height="26"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="635" height="26"/>
                                                                     <gestureRecognizers/>
                                                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                                                     <color key="textColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -165,7 +165,7 @@
                                                             </constraints>
                                                         </view>
                                                         <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JNa-b0-DK7">
-                                                            <rect key="frame" x="577" y="0.0" width="58" height="26"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="58" height="26"/>
                                                             <subviews>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zV0-PM-P6i">
                                                                     <rect key="frame" x="0.0" y="0.0" width="25" height="26"/>
@@ -318,7 +318,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Missing signatures" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQF-XJ-qkZ" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Missing signatures" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQF-XJ-qkZ" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
                                                     <rect key="frame" x="40" y="20" width="587" height="20"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -1101,44 +1101,58 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContainerSearchCell" id="ml6-0m-DV6" customClass="ContainerSearchCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="94" width="667" height="79"/>
+                                        <rect key="frame" x="0.0" y="94" width="667" height="96.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ml6-0m-DV6" id="MmW-IW-ds9">
-                                            <rect key="frame" x="0.0" y="0.0" width="667" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="667" height="96.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rmc-le-D5F">
-                                                    <rect key="frame" x="15" y="20" width="637" height="44"/>
+                                                    <rect key="frame" x="15" y="20" width="637" height="76.5"/>
                                                     <subviews>
-                                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Placeholder" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="e9Q-kh-dWn" customClass="SearchField" customModule="MoppApp" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="637" height="44"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits"/>
-                                                        </textField>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xLS-0k-Os5">
+                                                            <rect key="frame" x="0.0" y="0.0" width="637" height="76.5"/>
+                                                            <subviews>
+                                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Placeholder" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="e9Q-kh-dWn" customClass="SearchField" customModule="MoppApp" customModuleProvider="target">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="637" height="40"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="uSo-8Z-qb0"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <textInputTraits key="textInputTraits"/>
+                                                                </textField>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Placeholder" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bva-JE-ate">
+                                                                    <rect key="frame" x="0.0" y="56" width="637" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="e9Q-kh-dWn" secondAttribute="trailing" id="JH6-Ps-Yco"/>
-                                                        <constraint firstItem="e9Q-kh-dWn" firstAttribute="top" secondItem="Rmc-le-D5F" secondAttribute="top" id="Lgq-d5-hVI"/>
-                                                        <constraint firstAttribute="bottom" secondItem="e9Q-kh-dWn" secondAttribute="bottom" id="VX1-xA-BEb"/>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="Vy1-Yq-Dv8"/>
-                                                        <constraint firstItem="e9Q-kh-dWn" firstAttribute="leading" secondItem="Rmc-le-D5F" secondAttribute="leading" id="ojp-Nj-pjU"/>
+                                                        <constraint firstAttribute="trailing" secondItem="xLS-0k-Os5" secondAttribute="trailing" id="LT2-yg-crl"/>
+                                                        <constraint firstItem="xLS-0k-Os5" firstAttribute="top" secondItem="Rmc-le-D5F" secondAttribute="top" id="Yh0-vf-qtQ"/>
+                                                        <constraint firstItem="xLS-0k-Os5" firstAttribute="leading" secondItem="Rmc-le-D5F" secondAttribute="leading" id="hlu-wQ-MRv"/>
+                                                        <constraint firstAttribute="bottom" secondItem="xLS-0k-Os5" secondAttribute="bottom" id="l7H-qX-DSb"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Rmc-le-D5F" firstAttribute="leading" secondItem="MmW-IW-ds9" secondAttribute="leading" constant="15" id="3KW-dP-bte"/>
-                                                <constraint firstAttribute="bottom" secondItem="Rmc-le-D5F" secondAttribute="bottom" constant="15" id="JKG-FH-rUp"/>
+                                                <constraint firstAttribute="bottom" secondItem="Rmc-le-D5F" secondAttribute="bottom" id="JKG-FH-rUp"/>
                                                 <constraint firstItem="Rmc-le-D5F" firstAttribute="top" secondItem="MmW-IW-ds9" secondAttribute="top" constant="20" id="fI0-9a-a3J"/>
                                                 <constraint firstAttribute="trailing" secondItem="Rmc-le-D5F" secondAttribute="trailing" constant="15" id="gJD-HZ-ze1"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="placeholder" destination="Bva-JE-ate" id="bw0-zh-v09"/>
                                             <outlet property="searchBar" destination="e9Q-kh-dWn" id="AoH-VJ-nYj"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContainerFoundAddresseeCell" editingAccessoryType="disclosureIndicator" rowHeight="55" id="S7p-It-JWk" customClass="ContainerFoundAddresseeCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="173" width="667" height="55"/>
+                                        <rect key="frame" x="0.0" y="190.5" width="667" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="S7p-It-JWk" id="Bbt-ik-4qu">
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="55"/>
@@ -1216,7 +1230,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContainerAddresseeCell" editingAccessoryType="disclosureIndicator" rowHeight="61" id="Oy2-Qo-Kwl" customClass="ContainerAddresseeCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="228" width="667" height="61"/>
+                                        <rect key="frame" x="0.0" y="245.5" width="667" height="61"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Oy2-Qo-Kwl" id="hua-iu-fk8">
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="61"/>
@@ -1289,7 +1303,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContainerAddAllButtonCell" id="nlh-ij-xq6" customClass="ContainerAddAllButtonCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="289" width="667" height="44"/>
+                                        <rect key="frame" x="0.0" y="306.5" width="667" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nlh-ij-xq6" id="Izh-zE-ZeK">
                                             <rect key="frame" x="0.0" y="0.0" width="667" height="44"/>
